saving this stuff for later

--- a/src/override/override.html
+++ b/src/override/override.html
@@ -8,14 +8,7 @@
   <link href="css/dash.css" rel="stylesheet" type="text/css" />
 </head>
 <body class="" style="background-color:#000">
-  <textarea id="notes" class="page" spellcheck="false" placeholder="Type here...">
-- styleguide
-- media player
-- pomodoro timer
-- weather app
-- chess
-- site analyzer
-  </textarea>
+  <textarea id="notes" class="page" spellcheck="false" placeholder="Type here..."></textarea>
   <textarea id="json" class="page hide" spellcheck="false"></textarea>
 
   <div id="dash">
