--- a/src/override/override.html
+++ b/src/override/override.html
@@ -10,23 +10,23 @@
   <textarea id="notes" class="page" spellcheck="false" placeholder="Type here..."></textarea>
   <textarea id="json" class="page hide" spellcheck="false"></textarea>
 
-  <div id="dash">
-    <div class="widget">
-      <div id="temp"></div>
-    </div>
-    <div class="widget">
-      <button class="btn btn-json">JSON</button>
-    </div>
-    <div class="widget">
-      <button class="btn btn-blur">Blur</button>
-    </div>
-  </div>
+<!--  <div id="dash">-->
+<!--    <div class="widget">-->
+<!--      <div id="temp"></div>-->
+<!--    </div>-->
+<!--    <div class="widget">-->
+<!--      <button class="btn btn-json">JSON</button>-->
+<!--    </div>-->
+<!--    <div class="widget">-->
+<!--      <button class="btn btn-blur">Blur</button>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <script src="js/features/save-content.js"></script>
-  <script src="js/features/weather.js"></script>
-  <script src="js/features/json-viewer.js"></script>
+<!--  <script src="js/features/weather.js"></script>-->
+<!--  <script src="js/features/json-viewer.js"></script>-->
   <script src="js/codes/invert.js"></script>
   <script src="js/codes/nasa.js"></script>
-  <script src="js/features/blur.js"></script>
+<!--  <script src="js/features/blur.js"></script>-->
 </body>
 </html>
